--- a/src/classes/WaveMetadataApplication.cls
+++ b/src/classes/WaveMetadataApplication.cls
@@ -1,4 +1,5 @@
 public virtual class WaveMetadataApplication {
 	public String appName;
+	public String appDescription;
 	public List<WaveMetadataApplicationObject> objects;
 }
