Added folder text field

--- a/src/classes/WaveDataManagerController.cls
+++ b/src/classes/WaveDataManagerController.cls
@@ -24,6 +24,7 @@ public with sharing class WaveDataManagerController {
 	private WaveMetadata metadata;
 	private Map<String, String> appDescriptions; // <appName, appDesc>
 	private Map<String, Integer> appIndexes; // <appName, appIndex in this.metadata.waveApplications>
+	public String folderName {get;set;}
 
 	public WaveDataManagerController() {
 		this.objectsNodes = new List<WaveApplicationObject>();
@@ -109,95 +110,99 @@ public with sharing class WaveDataManagerController {
 	public void installApp(){
 		this.resetMessages();
 
-		try {			
-			// We build the node array
-			this.objectsNodes.clear();
+		if(!String.isEmpty(folderName)){
+			try {			
+				// We build the node array
+				this.objectsNodes.clear();
 
-			// We start collecting the common object to add to the node array
-			if(this.metadata.commonObjects != null) {
-				for(WaveMetadataApplicationObject wmaObj: this.metadata.commonObjects) {
-					List<WaveApplicationObject> objs = this.getObjectsToProcess(wmaObj);
-					this.objectsNodes.addAll(objs);
-				}
-			}
-			
-			if(this.metadata.waveApplications != null && this.appIndexes.containsKey(this.selectedWaveApp)){
-				// Based on the selection
-				WaveMetadataApplication selectedApp = this.metadata.waveApplications.get(this.appIndexes.get(this.selectedWaveApp));
-				if(selectedApp.objects != null){
-					for(WaveMetadataApplicationObject wmaObj: selectedApp.objects) {
+				// We start collecting the common object to add to the node array
+				if(this.metadata.commonObjects != null) {
+					for(WaveMetadataApplicationObject wmaObj: this.metadata.commonObjects) {
 						List<WaveApplicationObject> objs = this.getObjectsToProcess(wmaObj);
 						this.objectsNodes.addAll(objs);
 					}
 				}
-			}
-
-			if(this.objectsNodes.size() > 0){
-				this.currentNodeIndex = 0;
 				
-				SF_MetadataUtils mdUtils = new SF_MetadataUtils();
-
-				// Objects and fields Setup
-				for(WaveApplicationObject waObj: this.objectsNodes) {
-					
-					this.processingLog.add('Processing ' + waObj.name + ' object metadata...');
-
-					// Check object existence using waObj.name property					
-					if(!mdUtils.objectExists(waObj.name)){
-						// If object doesn't exist, create it
-						this.processingLog.add(waObj.name + ' doesn\'t exists. Attempting to create it...');
-						List<String> errors = mdUtils.createObject(waObj.name);
-						if(errors.size() == 0){
-							this.processingLog.add(waObj.name + ' object created successfully.');
-						}
-						else {
-							this.processingLog.addAll(errors);
-						}						
-					}
-
-					// Check fields existence using waObj.fields property
-					for(WaveApplicationObjectField field: waObj.fields) {
-						// If field doesn't exist, create it using field properties
-						if(field.Name.endsWithIgnoreCase('__c') && !mdUtils.fieldExists(waObj.name, field.Name)){
-							this.processingLog.add(waObj.name + '.' + field.Name + ' field doesn\'t exists. Attempting to create it...');
-							SF_MetadataUtils.CustomFieldSpecification fieldSpec = new SF_MetadataUtils.CustomFieldSpecification();
-							fieldSpec.ObjectName = waObj.name;
-							fieldSpec.Name = field.Name;
-					    	fieldSpec.Label = field.Label;
-					    	fieldSpec.Type = field.Type;
-							fieldSpec.ReferenceTo = field.ReferenceTo;
-							fieldSpec.Length = field.Length;
-							fieldSpec.Precision = field.Precision;
-							fieldSpec.Scale = field.Scale;
-							fieldSpec.IsExternalId = field.IsExternalId;
-							fieldSpec.IsRequired = field.IsRequired;
-
-							List<String> errors = mdUtils.createField(fieldSpec);
-							if(errors.size() == 0){
-								this.processingLog.add(waObj.name + '.' + field.Name + ' field created successfully.');
-							}
-							else {
-								this.processingLog.add(waObj.name + '.' + field.Name + ' field couldn\'t be created. Reasons: ');
-								this.processingLog.addAll(errors);
-							}
+				if(this.metadata.waveApplications != null && this.appIndexes.containsKey(this.selectedWaveApp)){
+					// Based on the selection
+					WaveMetadataApplication selectedApp = this.metadata.waveApplications.get(this.appIndexes.get(this.selectedWaveApp));
+					if(selectedApp.objects != null){
+						for(WaveMetadataApplicationObject wmaObj: selectedApp.objects) {
+							List<WaveApplicationObject> objs = this.getObjectsToProcess(wmaObj);
+							this.objectsNodes.addAll(objs);
 						}
 					}
 				}
 
-				// Print some message at the UI to inform that setup has succeeded
-				this.processingLog.add('All needed metadata was created successfully.');
+				if(this.objectsNodes.size() > 0){
+					this.currentNodeIndex = 0;
+					
+					SF_MetadataUtils mdUtils = new SF_MetadataUtils();
 
-				// We start loading data for each object
-				this.processNode();
-			}
-			else {
-				this.warningMessage = 'No data to process.';
-			}
-		} 
-		catch(Exception e) {
-			System.debug(e.getMessage());
-			System.debug(e.getStackTraceString());
-			this.errorMessage = e.getMessage();
+					// Objects and fields Setup
+					for(WaveApplicationObject waObj: this.objectsNodes) {
+						
+						this.processingLog.add('Processing ' + waObj.name + ' object metadata...');
+
+						// Check object existence using waObj.name property					
+						if(!mdUtils.objectExists(waObj.name)){
+							// If object doesn't exist, create it
+							this.processingLog.add(waObj.name + ' doesn\'t exists. Attempting to create it...');
+							List<String> errors = mdUtils.createObject(waObj.name);
+							if(errors.size() == 0){
+								this.processingLog.add(waObj.name + ' object created successfully.');
+							}
+							else {
+								this.processingLog.addAll(errors);
+							}						
+						}
+
+						// Check fields existence using waObj.fields property
+						for(WaveApplicationObjectField field: waObj.fields) {
+							// If field doesn't exist, create it using field properties
+							if(field.Name.endsWithIgnoreCase('__c') && !mdUtils.fieldExists(waObj.name, field.Name)){
+								this.processingLog.add(waObj.name + '.' + field.Name + ' field doesn\'t exists. Attempting to create it...');
+								SF_MetadataUtils.CustomFieldSpecification fieldSpec = new SF_MetadataUtils.CustomFieldSpecification();
+								fieldSpec.ObjectName = waObj.name;
+								fieldSpec.Name = field.Name;
+						    	fieldSpec.Label = field.Label;
+						    	fieldSpec.Type = field.Type;
+								fieldSpec.ReferenceTo = field.ReferenceTo;
+								fieldSpec.Length = field.Length;
+								fieldSpec.Precision = field.Precision;
+								fieldSpec.Scale = field.Scale;
+								fieldSpec.IsExternalId = field.IsExternalId;
+								fieldSpec.IsRequired = field.IsRequired;
+
+								List<String> errors = mdUtils.createField(fieldSpec);
+								if(errors.size() == 0){
+									this.processingLog.add(waObj.name + '.' + field.Name + ' field created successfully.');
+								}
+								else {
+									this.processingLog.add(waObj.name + '.' + field.Name + ' field couldn\'t be created. Reasons: ');
+									this.processingLog.addAll(errors);
+								}
+							}
+						}
+					}
+
+					// Print some message at the UI to inform that setup has succeeded
+					this.processingLog.add('All needed metadata was created successfully.');
+
+					// We start loading data for each object
+					this.processNode();
+				}
+				else {
+					this.warningMessage = 'No data to process.';
+				}
+			} 
+			catch(Exception e) {
+				System.debug(e.getMessage());
+				System.debug(e.getStackTraceString());
+				this.errorMessage = e.getMessage();
+			}		
+		} else {
+			this.errorMessage = 'A folder/app must be specified.';
 		}
 	}
 
